# whotookmy.money

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.circleci/: config.yml
ansible/: deploy.yml  hosts  provision.yml
backend/: .mocharc.json  package-lock.json  package.json  tsconfig.json
backend/src/: config.ts  courier.ts  crypto.ts  currency.test.ts  currency.ts  datetime.test.ts  datetime.ts  db.test.ts  db.ts  http_request.test.ts  index.test.ts  index.ts  log.ts  migrations.test.ts  outbox.ts  server.ts
backend/templates/: dashboard.html
ci-image/: Dockerfile
src/: authentication.ts  config.ts  crypto.ts  currency.test.ts  currency.ts  datetime.test.ts  datetime.ts  db.test.ts  db.ts  http_request.test.ts  http_request.ts  index.ts  log.ts  migrations.ts  outbox.ts  server.ts  wtmm_server.ts
src/assets/: dashboard.css  dashboard.js  global.css  reset.css
src/core/: email_router.test.ts  email_router.ts  index.ts  modify_purchase.test.ts  modify_purchase.ts
src/data/: index.test.ts  index.ts
wtmm/: Cargo.toml  Procfile
wtmm/src/: comms.rs  currency.rs  db.rs  email.rs  error_handling.rs  gmail_forwarding_confirmation.rs  hooks.rs  lib.rs  outbound_email.rs  purchase.rs  report.rs  report_job.rs  scheduler.rs  send_email.rs  store.rs  templates.rs  url_match.rs  user.rs
wtmm/templates/: base.html  income_form.html  income_form_email.html  income_form_email.txt  purchase_digest.txt
wtmm/test_assets/: chase_alert  gmail_confirmation_email  income_form_request  schwab_alert
(+27 files in other folders)
