[package]
name = "wtmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailparse = "0.13.8"
rusqlite = { version = "0.27.0", features = ["bundled", "hooks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
thiserror = "1.0"
rusqlite_migration = "1.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
cron = "0.11.0"
chrono = "0.4"
tiny_http = { version = "0.11.0", features = ["default"] }
ureq = "2.4.0"
